[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "aoc1"
path = "src/bin/aoc1.rs"

[[bin]]
name = "aoc2"
path = "src/bin/aoc2.rs"

[[bin]]
name = "aoc2part2"
path = "src/bin/aoc2part2.rs"